Add error text to registering driver, passenger and login page

--- a/src/app/modules/app-user/register-account/register-account.component.html
+++ b/src/app/modules/app-user/register-account/register-account.component.html
@@ -56,6 +56,7 @@
             <mat-label>Password</mat-label>
             <input matInput type="password" name="confirmPassword" formControlName="confirmPassword" />
           </mat-form-field>
+          <p>{{errorMessage}}</p>
       </div>
       <div fxLayout="row" fxLayoutAlign="space-between end">
         <button color="primary" type="submit" mat-raised-button>CREATE ACCOUNT</button>
