--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -15,6 +15,7 @@
             <mat-label>Password</mat-label>
             <input matInput type="password" name="password" formControlName="password" />
         </mat-form-field>
+        <p>{{errorMessage}}</p>
         <button type="submit" mat-raised-button>Log in</button>
     </form>
    <a routerLink="/register-account" routerLinkActive="active">DON'T HAVE AN ACCOUNT? REGISTER NOW.</a>
