Add review dialog

--- a/src/app/modules/ride/ride-history/ride-details-dialog/ride-details-dialog.component.html
+++ b/src/app/modules/ride/ride-history/ride-details-dialog/ride-details-dialog.component.html
@@ -1,4 +1,4 @@
-<div mat-dialog-content id="dialog-container">
+<div mat-dialog-content>
     <div class="app-ride-map-container">
         <app-map></app-map>
     </div>
@@ -55,6 +55,9 @@
                 </div>
             </div>
             </div>
-        </div>
+    </div>
+
+    <button mat-button id="btn-leave-review" (click)="onClickLeaveReview()">LEAVE A REVIEW</button>
+
 </div>
 
