--- a/src/app/modules/ride/ride-history/ride-details-dialog/ride-details-dialog.component.css
+++ b/src/app/modules/ride/ride-history/ride-details-dialog/ride-details-dialog.component.css
@@ -60,7 +60,6 @@ h2{
     font-size: 1.5em;
     margin-bottom: 0vh !important;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
 }
 
 .app-ride-review-comment {
@@ -129,4 +128,18 @@ button {
     height: 2.5em;
     letter-spacing: 0.5em;
     margin-top: 6vh !important;
+}
+
+#btn-leave-review {
+    color:black !important;
+    background-color: rgb(248, 248, 248) !important;
+    width: 20vw;
+    height: 2.75em;
+    letter-spacing: 0.4em;
+    margin-top: 6vh !important;
+    margin-bottom: 15vh;
+}
+
+::ng-deep button#btn-leave-review:hover {
+    background-color: white !important;
 }
