Add change password

--- a/src/app/modules/ride/book-ride/book-ride.component.html
+++ b/src/app/modules/ride/book-ride/book-ride.component.html
@@ -47,7 +47,7 @@
 
       <div class="param">
         <p>Pets</p>
-        <mat-checkbox color="primary" [(ngModel)]="petsTransport"></mat-checkbox>
+        <mat-checkbox id="pet-checkbox" color="primary" [(ngModel)]="petsTransport"></mat-checkbox>
       </div>
 
       <div class="param">
