Add favorite routes component

--- a/src/app/modules/app-user/account/passenger-other-acc-info/passenger-other-acc-info.component.html
+++ b/src/app/modules/app-user/account/passenger-other-acc-info/passenger-other-acc-info.component.html
@@ -6,7 +6,7 @@
         Ride statistics
         <mat-icon>launch</mat-icon>
     </button>
-    <button mat-button [routerLink]="['/login']">
+    <button mat-button [routerLink]="['/favorite-routes']">
         Favourite routes
         <mat-icon>launch</mat-icon>
     </button>
