--- a/src/app/modules/ride/book-ride/book-ride.component.html
+++ b/src/app/modules/ride/book-ride/book-ride.component.html
@@ -20,12 +20,12 @@
         <mat-form-field appearance="outline" class="target">
           <mat-label>Departure</mat-label>
           <mat-icon matPrefix class="input-icon">location_on</mat-icon>
-          <input matInput name="departure" formControlName="departure" [ngModel]="locationsFromBookAgain[0]?.departure.address">
+          <input matInput name="departure" formControlName="departure" [ngModel]="departureFromBookAgain">
         </mat-form-field>
         <mat-form-field>
           <mat-label>Destination</mat-label>
           <mat-icon matPrefix class="input-icon">flag</mat-icon>
-          <input matInput name="destination" formControlName="destination" [ngModel]="locationsFromBookAgain[0]?.destination.address">
+          <input matInput name="destination" formControlName="destination" [ngModel]="destinationFromBookAgain">
         </mat-form-field>
         <button mat-button type="submit" id="estimate-btn">Estimate</button>
       </form>
