--- a/src/app/modules/layout/toolbar/toolbar.component.html
+++ b/src/app/modules/layout/toolbar/toolbar.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar class="toolbar_color">
   <!--<span class="white-text">UBER</span>-->
   <button mat-button class="white-text bigger-text" [routerLink]="['/']" *ngIf="this.user.role != 'PASSENGER'">
-    UBER - {{this.user.id + ": " + this.user.email + " - " + this.user.role}}
+    UBER
   </button>
   <button mat-button class="white-text bigger-text" [routerLink]="['/book-ride']" *ngIf="this.user.role == 'PASSENGER'">
-    UBER - {{this.user.id + ": " + this.user.email + " - " + this.user.role}}
+    UBER
   </button>
 
   <span class="example-spacer"></span>
